--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -3,9 +3,9 @@
     <h4>COMMENTAIRES</h4>
 </div>
 <div class="comment_users">
-    <img src="{{ base_URI }}/assets/img/test-user.jpeg">
+    <img src="{{ base_URI }}/{{comment.picture}}">
     <div class="content_post w250">
-        <p><a href="">{{ comment.picture }}</a></p>
+        <p><a href="">{{ comment.pseudo }}</a></p>
         <div class="post_desc">
             <p>{{ comment.content}}</p>
         </div>
